fix: install openai directly in project for ES modules support

--- a/.github/workflows/automatic-update.yml
+++ b/.github/workflows/automatic-update.yml
@@ -26,15 +26,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          mkdir -p /tmp/ai-trends
-          cd /tmp/ai-trends
-          npm init -y
+          npm install --package-lock-only openai
           npm install openai
 
       - name: Generate automatic update
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          NODE_PATH: /tmp/ai-trends/node_modules
         run: |
           node scripts/generate-automatic-update.js
 
